--- a/home.html
+++ b/home.html
@@ -1,41 +1,37 @@
 <html>
 <head>
-  <title>みずちーさんのHP HOME</title>
+  <title>Mizuchin kotisivu. home</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" >
 </head>
 
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
-<FONT SIZE=5>～𧃴折り～</FONT><f>
-<FONT SIZE=-3>みずちーさんのHP</FONT><f><br><br>
-<img alt="カナ・アナベラルのつもり 背景は今や面影も無い某M峠の幽霊トンネル"src="https://mizutisann.github.io/HP/img/home/hometop03.png" border="0" width="512" height="250"><br>
-<!-- 02.png 謎のうちの子2　持ってるのはMSXのつもり--><!-- 03.png カナ・アナベラルのつもり 背景は今や面影も無い某M峠の幽霊トンネル--><!-- 04.png 辰だけに辰巳PA(^^;、謎のうちの子とエスハチ-->
-<FONT SIZE=-3>アクセスカウンタの置き方が分からなかったのでキリ番踏んでもバレません。うわーん(^^;</FONT><br><br>
-<a href="https://mizutisann.github.io/HP/syoukai"><img alt="管理人紹介"  src="https://mizutisann.github.io/HP/img/home/kanrinin.png" border="0" width="128" height="32">管理人っぽい人の紹介です。<br></a>
-<FONT SIZE=-3 COLOR=#999999>最終更新日：令和6年1月4日</FONT><br>
-<a href="https://mizutisann.github.io/HP/zakki2"><img alt="雑記など"  src="https://mizutisann.github.io/HP/img/home/zakki.png" border="0" width="128" height="32">書き散らしてます。多分。<br></a>
-<FONT SIZE=-3 COLOR=#999999>最終更新日：令和6年3月7日</FONT><br>
-<a href="https://mizutisann.github.io/HP/game"><img alt="ゲエムの間"  src="https://mizutisann.github.io/HP/img/home/game.png" border="0" width="128" height="32">ゲエムについて語ったりとか。<br></a>
-<FONT SIZE=-3 COLOR=#999999>最終更新日：令和6年3月12日</FONT><br>
-<a href="https://mizutisann.github.io/HP/PC.html"><img alt="PCの間"  src="https://mizutisann.github.io/HP/img/home/PC.png" border="0" width="128" height="32">主にオウルドなPCの事を。<br></a>
-<FONT SIZE=-3 COLOR=#999999>最終更新日：令和5年8月9日</FONT><br>
-<a href="https://mizutisann.github.io/HP/kuruma.html"><img alt="車関係の間"  src="https://mizutisann.github.io/HP/img/home/kuruma.png" border="0" width="128" height="32">これもオウルドな車の話を。<br></a>
-<FONT SIZE=-3 COLOR=#999999>最終更新日：令和6年3月17日</FONT><br>
-<a href="https://mizutisann.github.io/HP/kari"><img alt="少女會"  src="https://mizutisann.github.io/HP/img/home/egensou.png" border="0" width="128" height="32">描いた繪とかを貼ってます。<br></a>
-<FONT SIZE=-3 COLOR=#999999>最終更新日：令和Y年MM月DD日</FONT><br>
-<a href="https://mizutisann.github.io/HP/link"><img alt="リンク置き場"  src="https://mizutisann.github.io/HP/img/home/iteki.png" border="0" width="128" height="32">リンク置き場です。偶に異的。<br></a>
-<FONT SIZE=-3 COLOR=#999999>最終更新日：令和6年1月4日</FONT><br>
+<FONT SIZE=5>～mutkainen～</FONT>
+<FONT SIZE=-3>Mizuchin kotisivu.</FONT><br><br>
+<img alt="Cana Anaveralin aikomus Taustalla on eraan M-passin aavetunneli, joka on nyt vain varjo entisesta itsestaan."src="https://mizutisann.github.io/HP/img/home/2441hometop03.png" border="0" width="512" height="250"><br>
+<FONT SIZE=-3>En osannut sijoittaa kayttolaskuria, joten en tieda kayttokertojen maaraa. Saali.(^^;</FONT><br><br>
+<a href="https://mizutisann.github.io/HP/syoukai">Talonmiehen kaltaisen henkilon kayttoonotto.<br></a>
+<FONT SIZE=-3 COLOR=#999999>Viimeksi paivitetty: 4. tammikuuta 2024.</FONT><br><br>
+<a href="https://mizutisann.github.io/HP/zakki2">Erilaisia paivakirjamerkintoja. Luultavasti.<br></a>
+<FONT SIZE=-3 COLOR=#999999>Viimeksi paivitetty: 7. maaliskuuta 2024</FONT><br><br>
+<a href="https://mizutisann.github.io/HP/game">Esimerkiksi videopeleista puhuttaessa.<br></a>
+<FONT SIZE=-3 COLOR=#999999>Viimeksi paivitetty:12. maaliskuuta 2024</FONT><br><br>
+<a href="https://mizutisann.github.io/HP/PC.html">Lahinna ould PC-tietokoneista.<br></a>
+<FONT SIZE=-3 COLOR=#999999>Viimeksi paivitetty:9. elokuuta 2023</FONT><br><br>
+<a href="https://mizutisann.github.io/HP/kuruma.html">Hieman vanha autotarina.<br></a>
+<FONT SIZE=-3 COLOR=#999999>Viimeksi paivitetty:17. maaliskuuta 2024</FONT><br><br>
+<a href="https://mizutisann.github.io/HP/link">Linkkeja muille verkkosivuille on saatavilla.<br></a>
+<FONT SIZE=-3 COLOR=#999999>Viimeksi paivitetty:4. tammikuuta 2024</FONT><br><br>
 
 <br><hr><br>
-連絡などは各種SNSにてお願いします。<br>
+Ota meihin yhteytta seuraavien sosiaalisten verkostojen kautta.<br>
 misskey.io / @mizutisann<br>
 Discord / mizutisann_6806<br>
 Twitter / mizutisann<br>
 <br>
-<a href="https://mizutisann.github.io/HP/top"><img alt="バナー"  src="https://mizutisann.github.io/HP/img/banner-tuzura.png" width="200" height="40" border="0"><br></a>クリックでトップへ
+<a href="https://mizutisann.github.io/HP/top"><img alt="バナー"  src="https://mizutisann.github.io/HP/img/banner-tuzura.png" width="200" height="40" border="0"><br></a>Klikkaa ensimmaiselle sivulle
 </DIV>
 </body>
 </html>
-</div>
 </body>
 </html>
