--- a/top.html
+++ b/top.html
@@ -1,27 +1,23 @@
 <html>
 <head>
-  <title>みずちーさんのHP トップ</title>
+  <title>Mizuchin kotisivu. Tervetuloa!</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" >
 </head>
 
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
-<div align="center"><a href="https://mizutisann.github.io/HP/home"><img alt="飾りバー" width="512" height="256" border="0" src="https://cdn.discordapp.com/attachments/889847829063933972/961248546110210198/top.png"><br></a>
+<div align="center"><a href="https://mizutisann.github.io/HP/home"><img src=https://mizutisann.github.io/HP/img/2441top.png alt="koristeellinen palkki" width="512" height="256" border="0" src=""><br></a>
 <p>　　　　　　　　　　　　　　　　　　　Since 2022.4 ～</p>
 <br>
 <br>
-<a href="https://mizutisann.github.io/HP/home">HOMEへ</a>
+<a href="https://mizutisann.github.io/HP/2441home">Tervetuloa!</a>
 <br>
 <br>
-<h2>きっとこのペエジは</h2>
-<h2>ゲームやPC、車などを扱うHPの</h2>
-<h2>TOPだと思います。(^^;</h2>
+<h2>Olen varma, etta tama sivu johtaa peleja, tietokoneita ja autoja kasitteleville verkkosivustoille.(^^;</h2>
 <br>
 <br>
-<h6>ただHPを作りたかっただけとも言う（ぉ</h6>
+<h6>Halusin vain tehda verkkosivuston.（oh</h6>
 <br><hr>
-ブックマーク、リンク等はこのページにお願いします。<br>
-当ペエジは、横1000pxぐらいで見ることを想定してます。多分。
-<br>おおよそリンクフリーです。バナアは持ち帰ってテキトーにお使いくださいな。<img src=https://mizutisann.github.io/HP/img/banner-tuzura.png width="200" height="40" border="0"><br>
+<br>Verkkosivustomme on suunniteltu katseltavaksi noin 1000 pikselia leveana. Todennakoisesti.<img src=https://mizutisann.github.io/HP/img/banner-tuzura.png width="200" height="40" border="0"><br>
 </DIV>
 </body>
 </html>
