--- a/top.html
+++ b/top.html
@@ -9,7 +9,7 @@
 <p>　　　　　　　　　　　　　　　　　　　Since 2022.4 ～</p>
 <br>
 <br>
-<a href="https://mizutisann.github.io/HP/2441home">Tervetuloa!</a>
+<a href="https://mizutisann.github.io/HP/home">Tervetuloa!</a>
 <br>
 <br>
 <h2>Olen varma, etta tama sivu johtaa peleja, tietokoneita ja autoja kasitteleville verkkosivustoille.(^^;</h2>
