--- a/zakki2.html
+++ b/zakki2.html
@@ -8,6 +8,14 @@
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
 
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">エイプリルフール</font><br></td>
+             <td align="center" width="200">2024年4月1日<br></td></tr></tbody></table>
+<table border="1" width="999"><tbody><tr><td width="200" align="left">
+エイプリルフールという事で<a href="https://mizutisann.github.io/HP/2441top.html">トップページ</a>と<a href="https://mizutisann.github.io/HP/2441home.html">ホームページ</a>をフィンランド語にしてみました(^^;<br>
+明日になったら戻しますー(^^;<br>
+</td></tr></tbody></table><br><br><br>
+
+
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">ワイ○ピ 東京○リフト</font><br></td>
              <td align="center" width="200">2024年3月27日<br></td></tr></tbody></table>
 <table border="1" width="999"><tbody><tr><td width="200" align="left">
