--- a/zakki2.html
+++ b/zakki2.html
@@ -11,7 +11,7 @@
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">エイプリルフール</font><br></td>
              <td align="center" width="200">2024年4月1日<br></td></tr></tbody></table>
 <table border="1" width="999"><tbody><tr><td width="200" align="left">
-エイプリルフールという事で<a href="https://mizutisann.github.io/HP/2441top.html">トップページ</a>と<a href="https://mizutisann.github.io/HP/2441home.html">ホームページ</a>をフィンランド語にしてみました(^^;<br>
+エイプリルフールという事で<a href="https://mizutisann.github.io/HP/2441/2441top.html">トップページ</a>と<a href="https://mizutisann.github.io/HP/2441/2441home.html">ホームページ</a>をフィンランド語にしてみました(^^;<br>
 明日になったら戻しますー(^^;<br>
 </td></tr></tbody></table><br><br><br>
 
