--- a/zakki2.html
+++ b/zakki2.html
@@ -8,6 +8,18 @@
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
 
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">友達のバイクの話</font><br></td>
+             <td align="center" width="200">2024年4月4日<br></td></tr></tbody></table>
+<table border="1" width="999"><tbody><tr><td width="200" align="left">
+友達がバイクを買って来た。90年代のレーサーレプリカブームの中で出来たヤマハの4気筒。<br>
+約50万で買って来たらしいが各部がボロボロ…。（当時の新車価格が53万ぐらいらしい。）<br>
+タイヤ、チェーンは新品だが廉価品、各所に錆とネジの欠品、スイングアームは謎の刷毛塗り。<br>
+挙句の果てには配線不良で尾灯が点かない。オマケにクーラントは錆色、走行距離不明。<br>
+最後の地雷は、ネットで現車確認無しの購入。（バイク屋から購入したらしいが…）<br>
+<br>
+何処かのメーカーが新車50万ぐらいで4気筒250CCのキャブ車を出すとバカ売れな気がするけど、どっかが作らない物か…。<br>
+</td></tr></tbody></table><br><br><br>
+
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">8.11</font><br></td>
              <td align="center" width="200">2024年4月4日<br></td></tr></tbody></table>
 <table border="1" width="999"><tbody><tr><td width="200" align="left">
