--- a/zakki2.html
+++ b/zakki2.html
@@ -8,13 +8,27 @@
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
 
+
+
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">眠れない夜には</font><br></td>
+             <td align="center" width="200">2024年4月22日<br></td></tr></tbody></table>
+<table border="1" width="999"><tbody><tr><td width="200" align="left">
+今はどうしようもない、いつかの未来に来る悩みや不安で寝れない事が多々ある。
+この時間がイヤでワザと遅くまで起きたりしているが、寝ないといけない時もある。
+その時は横になってCLANNADの「町、時の流れ、人」をよく流している。
+ようつべのコメント欄を見ると『憂鬱になる』などといわれているが、私は逆な気がする。
+ゲーム内でこのBGMが使われるシーンは、いつかは変わってしまう日常や、憂鬱なことも語るが、同時に信念のようなものも感じる。
+『俺たちは登り始める。長い、長い坂道を。』
+今日はあまり良い締めが思いつかないね(^^;
+</td></tr></tbody></table><br><br><br>
+
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">新しくキーボードを買った</font><br></td>
              <td align="center" width="200">2024年4月17日<br></td></tr></tbody></table>
 <table border="1" width="999"><tbody><tr><td width="200" align="left">
 深夜の空気と新しいキーボードがあると、何か文章を書きたくなるものだ…。<br>
 ハードオフのジャンク箱に良さげなメカニカルキーボードが1100円で売ってあったので買って来た。<br>
 今まで、ハードオフで1100円で買ったhv-kb389lという定価5000円ぐらいのメカニカルキーボードを使っていた。<br>
-中華青軸の響くようなクリック音も嫌いでは無かったが、今回物は定価が2万を超える代物らしい。<br>
+中華青軸の響くようなクリック音も嫌いでは無かったが、今回の物は定価が2万を超える代物らしい。<br>
 軸が変わった（赤軸）という事もあるが、このキーボードはスコスコと入力が出来て心地が良い。<br>
 ただ玉に傷なのが、shiftキーとZキーの間に記号キーが1つ割り込まされている事。<br>
 やるゲームと言えば東方ぐらいなもので、Cキーが遠くなって指が痛い。<br>
