--- a/zakki2.html
+++ b/zakki2.html
@@ -10,16 +10,11 @@
 
 
 
-<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">眠れない夜には</font><br></td>
-             <td align="center" width="200">2024年4月22日<br></td></tr></tbody></table>
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">完璧な教科書は作れないなぁと。</font><br></td>
+             <td align="center" width="200">2024年4月29日<br></td></tr></tbody></table>
 <table border="1" width="999"><tbody><tr><td width="200" align="left">
-今はどうしようもない、いつかの未来に来る悩みや不安で寝れない事が多々ある。
-この時間がイヤでワザと遅くまで起きたりしているが、寝ないといけない時もある。
-その時は横になってCLANNADの「町、時の流れ、人」をよく流している。
-ようつべのコメント欄を見ると『憂鬱になる』などといわれているが、私は逆な気がする。
-ゲーム内でこのBGMが使われるシーンは、いつかは変わってしまう日常や、憂鬱なことも語るが、同時に信念のようなものも感じる。
-『俺たちは登り始める。長い、長い坂道を。』
-今日はあまり良い締めが思いつかないね(^^;
+最近、第二期WW2のことを調べるブームが自分の中で起こっている。<br>
+
 </td></tr></tbody></table><br><br><br>
 
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">新しくキーボードを買った</font><br></td>
