--- a/zakki2.html
+++ b/zakki2.html
@@ -13,8 +13,10 @@
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">完璧な教科書は作れないなぁと。</font><br></td>
              <td align="center" width="200">2024年4月29日<br></td></tr></tbody></table>
 <table border="1" width="999"><tbody><tr><td width="200" align="left">
-最近、第二期WW2のことを調べるブームが自分の中で起こっている。<br>
-
+最近、第二期WW2のことを調べるブームが自分の中で起こっている。
+教科書だとどう記載されているのかと思い高校の世界史の教科書を出してみたが、フィンランドがドイツの戦力を借りつつ自国をソ連から守り抜いた継続戦争はおろか、史上最大の軍事作戦と言われているノルマンディー上陸作戦の”ノ”の字も載っていない。<br>
+そのくせ、日本の事になると、戦火を被った有名人の言葉の凄惨な所を切り抜いたコラムが乗っている。<br>
+10年に満たない時間の流れを7ページに纏めている以上仕方のない話だとは思うし、戦争を美化しろと言いたいワケでは無いが、あの戦争が無ければ今の日本は無かっただろうし…等とボソボソと…。<br>
 </td></tr></tbody></table><br><br><br>
 
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">新しくキーボードを買った</font><br></td>
