--- a/zakki2.html
+++ b/zakki2.html
@@ -19,7 +19,7 @@
 10年に満たない時間の流れを7ページに纏めている以上仕方のない話だとは思うし、戦争を美化しろと言いたいワケでは無いが、あの戦争が無ければ今の日本は無かっただろうし…等とボソボソと…。<br>
 P.S.<br>
 陸軍のマレー半島の方の話が少ないのもなんだかなぁと思っていたり。<br>
-海軍の話と比べて凄惨ではないのと、名前も”太平洋”戦争だし…<br>
+海軍の話と比べて凄惨ではないのと、名前も”太平洋”戦争だし、それで記載が薄いのか…。<br>
 終戦後、疾風とスピットファイアがランデブーした話とか…。右翼だと思われてダメかな(^^;<br>
 </td></tr></tbody></table><br><br><br>
 
