--- a/zakki2.html
+++ b/zakki2.html
@@ -9,6 +9,13 @@
 <div align="center">
 
 
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">胃腸炎？</font><br></td>
+             <td align="center" width="200">2024年5月6日<br></td></tr></tbody></table>
+<table border="1" width="999"><tbody><tr><td width="200" align="left">
+胃腸炎っぽい何かで床に伏してました。腸の方は正常そうだが、胃の方がダメで…<br>
+寝ても症状が変わらなかったので病院で点滴と薬を貰ってきて、8割ぐらい治ったかな…<br>
+うーん、点滴してもらった腕が重い(^^;<br>
+</td></tr></tbody></table><br><br><br>
 
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">完璧な教科書は作れないなぁと。</font><br></td>
              <td align="center" width="200">2024年4月29日<br></td></tr></tbody></table>
