--- a/zakki2.html
+++ b/zakki2.html
@@ -8,6 +8,13 @@
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
 
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">インターネット物書き</font><br></td>
+             <td align="center" width="200">2024年5月8日<br></td></tr></tbody></table>
+<table border="1" width="999"><tbody><tr><td width="200" align="left">
+自我の少ないインターネット物書きに憧れがある。
+何度か全消去を考えたこともあるが、結局、”みずちーさん”という名に帰ってきてしまう。
+自分よりも物を取るような性格なので、それが影響しているのだろうか…。
+</td></tr></tbody></table><br><br><br>
 
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">胃腸炎？</font><br></td>
              <td align="center" width="200">2024年5月6日<br></td></tr></tbody></table>
