--- a/zakki2.html
+++ b/zakki2.html
@@ -11,14 +11,14 @@
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">自分と物と。</font><br></td>
              <td align="center" width="200">2024年5月9日<br></td></tr></tbody></table>
 <table border="1" width="999"><tbody><tr><td width="200" align="left">
-新型のIpadの発表ムービーが日本で反感を生んでいる。
-かくいう私もプレス機で物を圧し潰すあのムービーは反吐がでるほど嫌い。図面を引いて、作って見て、それが市場に出て、最初に買った人が居て、それが再び市場に流れて…。
-開発段階にも、市場にも、オーナーにも、きっと色々なドラマがあった事だろう。それをそこで終わらせて良いのか？と。
+新型のIpadの発表ムービーが日本で反感を生んでいる。<br>
+かくいう私もプレス機で物を圧し潰すあのムービーは反吐がでるほど嫌い。図面を引いて、作って見て、それが市場に出て、最初に買った人が居て、それが再び市場に流れて…。<br>
+開発段階にも、市場にも、オーナーにも、きっと色々なドラマがあった事だろう。それをそこで終わらせて良いのか？と。<br>
 不思議な事に日本国外では、受け入れられている様子で、思想の違いを実感させられた。<br><br>
-偶々、昨日の朝、ここに書いた通り、私は自分よりも物を取るような性格で動いている。
-自分が大切にしている物が自分の寿命より永く愛され、出来る事なら現役で使われ続ける事を望んでいる。
-まあ、保存するにも金が掛かる～とか、色々問題はあるし、私が比較的若いから～とか思われているかも知れないが…。
-まあ、そう思われていても、自分が大切にしている物が自分の寿命より永く愛される。を目指したいと思った今日この頃。(^^;
+偶々、昨日の朝、ここに書いた通り、私は自分よりも物を取るような性格で動いている。<br>
+自分が大切にしている物が自分の寿命より永く愛され、出来る事なら現役で使われ続ける事を望んでいる。<br>
+まあ、保存するにも金が掛かる～とか、色々問題はあるし、私が比較的若いから～とか思われているかも知れないが…。<br>
+まあ、そう思われていても、自分が大切にしている物が自分の寿命より永く愛される。を目指したいと思った今日この頃。(^^;<br>
 </td></tr></tbody></table><br><br><br>
 
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">インターネット物書き</font><br></td>
