--- a/zakki2.html
+++ b/zakki2.html
@@ -8,6 +8,61 @@
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
 
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">SS、純喫茶ブルーバード</font><br></td>
+             <td align="center" width="200">2024年5月18日<br></td></tr></tbody></table>
+<table border="1" width="999"><tbody><tr><td width="200" align="left">
+『カランカラン…』<br>
+ふと路地の方から、昔聞きなれたドアチャイムの音と、紅茶の匂いがした。<br>
+プルースト効果だっけ。そういえばそんな話を、あの失われた場所で聞いたな。<br>
+<br>
+昔、この通りには純喫茶ブルーバードという洒落た純喫茶があった。<br>
+鳥の描かれた看板を潜り、ドアチャイムを鳴らしながら入店する。<br>
+私はよく店の入り口から見て左側の、角の日の当たらないテーブル席で、テドゥルヌを冷ましながら、店の客の話をぼんやり聞き、ﾎﾞｿｯと呟く。というのが日課であった。<br>
+晴れの日も雨の日も。地震が起きた時には真っ先に駆け付け、事件が起こると途端に騒がしくなる。誰かが面白い事を言い笑う。誰かが知見を広める。<br>
+私はそんな場所が好きで、楽しく眺めていた。<br>
+<br>
+ある日、店の机の配置が変わった。店の人が気を利かせたのか、お気に入りの席は無くなり、日の当たる席しか無くなってしまった。<br>
+同じように不服に思う人が町の何処かにいるらしく、数日後にはブラインドを設置してくれた人も居た。<br>
+私は日課へと戻った。<br>
+<br>
+その頃の私の日常は荒れに荒れていた。学業が上手く行かず鬱になっていた。でも、その喫茶店へ足を運ぶと気分がマシになった。<br>
+学校の生徒で、私は彼の事を知らないのに、何処で聞いたのか馴れ馴れしく話しかけてきたヤツも居たが、数か月後には出禁になった。<br>
+<br>
+ある日、一日で剥がされる伝言掲示板が張り出された。<br>
+ヤケに推されたが、私は最後まで使う事は無かった。なんせ、趣の無いライバル喫茶店の名物のパクリだったから。<br>
+その掲示板は早々に撤去された。<br>
+<br>
+その後もカラオケが設置されたりと、常連からの不満は高鳴るばかりだった。<br>
+ある日、常連の一人だったらしい国内の実業家が、到底想像も出来ないような金額で買収していった。<br>
+<br>
+従業員の解雇などもあったが、無駄な事をせず良い感じに調整をしてくれていた。<br>
+私は、この実業家は”分かっている”な…。と、少々信頼を置いていた。<br>
+ただ、その実業家が突然、薬物でもキメて頭が狂ったのか、能動的に変更を加え始める。<br>
+持ち帰り用のセットを貴族しか払えないような価格にしたり、発言の注目度によって割引が効く会員制のシステムを導入したりした。<br>
+<br>
+私はその店の魅力が半減したような気がした。常連の勧めにより、この頃から、別の純喫茶に通い始めた。<br>
+<br>
+それもで、あのブルーバードで紅茶を飲みたい日もある。<br>
+ある日、店の外観が少し変わった。今まで青い鳥が居た看板が「キ」と描かれただけの味気ない看板になってしまっていた。<br>
+常連の話を聞くに、どうやら店の名前が「キ」になってしまったらしい。これではキ印じゃないか…。<br>
+ある常連が元の青い看板に戻すシートを作ってくれたのでしばらく貼っていた。<br>
+<br>
+………<br>
+<br>
+ある日、店が移転をした。<br>
+久々に店を覗くと今までの面影は7割薄れていた。魔改造配膳ロボットが珈琲を運び、ゾンビがそれを飲んでいる。それを見た定員がゾンビに出禁を言い渡す。<br>
+常連はキの店主に向かってブルーバードと呼び、ラジオからは『ぶｒ…キにてお便りを～』といった声が聞こえてくる。<br>
+<br>
+見るに、そもそも別の喫茶には行かないという人や、別の喫茶へ行っても、ブルーバードだったものに戻る人が多く感じる。<br>
+<br>
+……<br>
+<br>
+今日も私は喫茶三須木へ通う。店の入り口から見て左側の、角の日の当たらないテーブル席で、アールグレイを冷ましながら、ぼんやりと辺りを見る。<br>
+店主のたわごとや、別の系列店から伝わってくる面白い話、あの頃の喫茶のようだ…。<br>
+あの頃、よく喋っていた人たちがここにくれば、あんな惨状を見なくて済むのにな…。なんて思いながら、少し遠くに流れる雑踏を見ていた。<br>
+このお話はおおよそフィクションです。<br>
+</td></tr></tbody></table><br><br><br>
+
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">自分と物と。</font><br></td>
              <td align="center" width="200">2024年5月9日<br></td></tr></tbody></table>
 <table border="1" width="999"><tbody><tr><td width="200" align="left">
