--- a/zakki2.html
+++ b/zakki2.html
@@ -8,6 +8,18 @@
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
 
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">PCを買い替え？た。</font><br></td>
+             <td align="center" width="200">2024年5月18日<br></td></tr></tbody></table>
+<table border="1" width="999"><tbody><tr><td width="200" align="left">
+数年間使っていたサンディなマザボが大往生を遂げたので、マザボ、CPU、メモリを買い替えた。<br>
+マザボはb760m pg lightning/d4、CPUはi5 12400F、メモリはDDR4-25600の8GBを二枚。計41930円ナリ。<br>
+<br>
+やらかしたのが、windows再インスコ時に見当違いで東方とかが入ったフォルダを軒並み完全消去してしまった事…　orz<br>
+ちゃんとバックアップ取ったかは落ち着いて確認しないとダメだね………。俺の数年分の東方のデータが………　orz<br>
+<br>
+GPUやディスクドライブ、電源やケース、その他小物は、引き継いだしたので、タイトルは歯切れの悪い感じに…(^^;<br>
+</td></tr></tbody></table><br><br><br>
+
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">SS、純喫茶ブルーバード</font><br></td>
              <td align="center" width="200">2024年5月18日<br></td></tr></tbody></table>
 <table border="1" width="999"><tbody><tr><td width="200" align="left">
