--- a/zakki2.html
+++ b/zakki2.html
@@ -17,7 +17,9 @@
 やらかしたのが、windows再インスコ時に見当違いで東方とかが入ったフォルダを軒並み完全消去してしまった事…　orz<br>
 ちゃんとバックアップ取ったかは落ち着いて確認しないとダメだね………。俺の数年分の東方のデータが………　orz<br>
 <br>
-GPUやディスクドライブ、電源やケース、その他小物は、引き継いだしたので、タイトルは歯切れの悪い感じに…(^^;<br>
+GPUやディスクドライブ、電源やケース、その他小物は、引き継いだので、タイトルは歯切れの悪い感じに…(^^;<br><br>
+P.S. 後日、SSDをSATA形式からM.2の1TB（Intel 670p）にアップデート。6980円ナリ。<br>
+財布が空っぽです(;;)<br>
 </td></tr></tbody></table><br><br><br>
 
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">SS、純喫茶ブルーバード</font><br></td>
