--- a/zakki2.html
+++ b/zakki2.html
@@ -8,6 +8,15 @@
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
 
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">映画『Winny』を見た</font><br></td>
+             <td align="center" width="200">2024年6月24日<br></td></tr></tbody></table>
+<table border="1" width="999"><tbody><tr><td width="200" align="left">
+映画『Winny』を見た。<br>
+<s>どっかのグラ〇ツーリ〇モとは違って</s>機材等が割と再現されていてニヤニヤした。（特にPC-8001とか、エンドロールにBEEPが載ってて納得した）<br>
+最後の方、『47氏は死んだが、彼の作ったソフトウェアは動き続けている（意訳）』で涙線がダメだった。欲を言うなら最高裁まで見たかったな…。<br>
+愛媛県警の裏金問題の話はちょっと微妙だったかな。いい用例が無かったものか…。（県民です。お察しください。）<br>
+</td></tr></tbody></table><br><br><br>
+
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">PCを買い替え？た。</font><br></td>
              <td align="center" width="200">2024年5月18日<br></td></tr></tbody></table>
 <table border="1" width="999"><tbody><tr><td width="200" align="left">
