--- a/syoukai.html
+++ b/syoukai.html
@@ -41,7 +41,7 @@
     </tr>
         <tr>
       <td width="157" align="center">好きなアニメ</td>
-      <td align="center" width="636">serial experiments lain、ぼっち・ざ・ろっく！、16bitセンセーション another layer</td>
+      <td align="center" width="636">serial experiments lain、ぼっち・ざ・ろっく！、16bitセンセーションAL</td>
     </tr>
         <tr>
       <td width="157" align="center">好きなパソコン</td>
@@ -52,7 +52,7 @@
       <td align="center" width="636">ホンダ ASシリーズ（特にS800）</td>
     </tr>        <tr>
       <td width="157" align="center">好きな軍事家</td>
-      <td align="center" width="636">特にいません</td>
+      <td align="center" width="636">加藤建夫陸軍少佐</td>
     </tr>        <tr>
       <td width="157" align="center">好きなお家</td>
       <td align="center" width="636">和風なお家・広いガレージ欲しい。</td>
