--- a/zakki2.html
+++ b/zakki2.html
@@ -8,6 +8,16 @@
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
 
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">携帯ゲーム機修理三本勝負</font><br></td>
+             <td align="center" width="200">2024年7月16日<br></td></tr></tbody></table>
+<table border="1" width="999"><tbody><tr><td width="200" align="left">
+近場のハードオフの店員がジャンクだったのか、ビネガー発病したGBポケットが550円、電源不良のワンダースワンカラーが110円、電源不良のGB無印が110円と激安だったので買って帰った。<br>
+電源不良のGB無印は、カセット端子の接触が悪いだけだったので、清掃で解決。<br>
+電源不良のワンダースワンカラーは、電池の液漏れ痕があったので分解清掃で解決。（ただしカセットを持ってないので動作確認が出来ていない。カセット、タカスギ。）<br>
+ビネガー発病したGBポケットが一番大変で（一番高かったのにー(^^;）、液漏れの痕を清掃し、腐った偏光板を必死に除去。試しに起動してみると…ライン抜け。（壊してしまった）<br>
+GBポケット、IPS液晶化決定かな……。（6000円ぐらいする）<br>
+</td></tr></tbody></table><br><br><br>
+
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">映画『Winny』を見た</font><br></td>
              <td align="center" width="200">2024年6月24日<br></td></tr></tbody></table>
 <table border="1" width="999"><tbody><tr><td width="200" align="left">
