--- a/home.html
+++ b/home.html
@@ -11,20 +11,20 @@
 <img alt="カナ・アナベラルのつもり 背景は今や面影も無い某M峠の幽霊トンネル"src="https://mizutisann.github.io/HP/img/home/hometop03.png" border="0" width="512" height="250"><br>
 <!-- 02.png 謎のうちの子2　持ってるのはMSXのつもり--><!-- 03.png カナ・アナベラルのつもり 背景は今や面影も無い某M峠の幽霊トンネル--><!-- 04.png 辰だけに辰巳PA(^^;、謎のうちの子とエスハチ-->
 <FONT SIZE=-3>アクセスカウンタの置き方が分からなかったのでキリ番踏んでもバレません。うわーん(^^;</FONT><br><br>
-<a href="https://mizutisann.github.io/HP/syoukai"><img alt="管理人紹介"  src="https://mizutisann.github.io/HP/img/home/kanrinin.png" border="0" width="128" height="32">管理人っぽい人の紹介です。<br></a>
-<FONT SIZE=-3 COLOR=#999999>最終更新日：令和6年1月4日</FONT><br>
-<a href="https://mizutisann.github.io/HP/zakki2"><img alt="雑記など"  src="https://mizutisann.github.io/HP/img/home/zakki.png" border="0" width="128" height="32">書き散らしてます。多分。<br></a>
-<FONT SIZE=-3 COLOR=#999999>最終更新日：令和6年5月6日</FONT><br>
-<a href="https://mizutisann.github.io/HP/game"><img alt="ゲエムの間"  src="https://mizutisann.github.io/HP/img/home/game.png" border="0" width="128" height="32">ゲエムについて語ったりとか。<br></a>
-<FONT SIZE=-3 COLOR=#999999>最終更新日：令和6年3月12日</FONT><br>
-<a href="https://mizutisann.github.io/HP/PC.html"><img alt="PCの間"  src="https://mizutisann.github.io/HP/img/home/PC.png" border="0" width="128" height="32">主にオウルドなPCの事を。<br></a>
-<FONT SIZE=-3 COLOR=#999999>最終更新日：令和5年8月9日</FONT><br>
-<a href="https://mizutisann.github.io/HP/kuruma.html"><img alt="車関係の間"  src="https://mizutisann.github.io/HP/img/home/kuruma.png" border="0" width="128" height="32">これもオウルドな車の話を。<br></a>
-<FONT SIZE=-3 COLOR=#999999>最終更新日：令和6年3月17日</FONT><br>
-<a href="https://mizutisann.github.io/HP/kari"><img alt="少女會"  src="https://mizutisann.github.io/HP/img/home/egensou.png" border="0" width="128" height="32">描いた繪とかを貼ってます。<br></a>
-<FONT SIZE=-3 COLOR=#999999>最終更新日：令和Y年MM月DD日</FONT><br>
-<a href="https://mizutisann.github.io/HP/link"><img alt="リンク置き場"  src="https://mizutisann.github.io/HP/img/home/iteki.png" border="0" width="128" height="32">リンク置き場です。偶に異的。<br></a>
-<FONT SIZE=-3 COLOR=#999999>最終更新日：令和6年1月4日</FONT><br>
+<a href="https://mizutisann.github.io/HP/syoukai"><img alt="管理人紹介"  src="https://mizutisann.github.io/HP/img/home/syoukai0.png"  onmouseover="this.src='https://mizutisann.github.io/HP/img/home/syoukai1.png'" onmouseout="this.src='https://mizutisann.github.io/HP/img/home/syoukai0.png'" border="0" width="256" height="32"></a><FONT SIZE=-3 COLOR=#999999>  最終更新日：令和6年7月12日</FONT><br>
+<FONT COLOR=#999999>管理人っぽい人の雑な紹介。<br></FONT>
+<a href="https://mizutisann.github.io/HP/zakki2"><img alt="雑記など"  src="https://mizutisann.github.io/HP/img/home/zakki0.png" onmouseover="this.src='https://mizutisann.github.io/HP/img/home/zakki1.png'" onmouseout="this.src='https://mizutisann.github.io/HP/img/home/zakki0.png'" border="0" width="256" height="32"></a><FONT SIZE=-3 COLOR=#999999>  最終更新日：令和6年7月16日</FONT><br>
+<FONT COLOR=#999999>駄文と日記の詰め合わせ。</FONT><br>
+<a href="https://mizutisann.github.io/HP/game"><img alt="ゲエムの間"  src="https://mizutisann.github.io/HP/img/home/game0.png"  onmouseover="this.src='https://mizutisann.github.io/HP/img/home/game1.png'" onmouseout="this.src='https://mizutisann.github.io/HP/img/home/game0.png'" border="0" width="256" height="32"></a><FONT SIZE=-3 COLOR=#999999>  最終更新日：令和6年3月12日</FONT><br>
+<FONT COLOR=#999999>ゲエムについてつらつらと。</FONT><br>
+<a href="https://mizutisann.github.io/HP/PC.html"><img alt="PCの間"  src="https://mizutisann.github.io/HP/img/home/pc0.png" onmouseover="this.src='https://mizutisann.github.io/HP/img/home/pc1.png'" onmouseout="this.src='https://mizutisann.github.io/HP/img/home/pc0.png'" border="0" width="256" height="32"></a><FONT SIZE=-3 COLOR=#999999>  最終更新日：令和5年8月9日</FONT><br>
+<FONT COLOR=#999999>産廃ポンコツPCをシバく。</FONT><br>
+<a href="https://mizutisann.github.io/HP/kuruma.html"><img alt="車関係の間"  src="https://mizutisann.github.io/HP/img/home/kuruma0.png"  onmouseover="this.src='https://mizutisann.github.io/HP/img/home/kuruma1.png'" onmouseout="this.src='https://mizutisann.github.io/HP/img/home/kuruma0.png'" border="0" width="256" height="32"></a><FONT SIZE=-3 COLOR=#999999>  最終更新日：令和6年3月17日</FONT><br>
+<FONT COLOR=#999999>ミニカーから実車まで。主に旧車？</FONT><br>
+<a href="http://mizutisann.starfree.jp/potiboard5/index.html"><img alt="懐古的繪描板"  src="https://mizutisann.github.io/HP/img/home/oekakibbs0.png" onmouseover="this.src='https://mizutisann.github.io/HP/img/home/oekakibbs1.png'" onmouseout="this.src='https://mizutisann.github.io/HP/img/home/oekakibbs0.png'" border="0" width="256" height="32"></a><FONT SIZE=-3 COLOR=#999999>  最終更新日：令和6年7月17日</FONT><br>
+<FONT COLOR=#999999>お絵描き掲示板。</FONT><br>
+<a href="https://mizutisann.github.io/HP/link"><img alt="リンク置き場"  src="https://mizutisann.github.io/HP/img/home/link0.png" onmouseover="this.src='https://mizutisann.github.io/HP/img/home/link1.png'" onmouseout="this.src='https://mizutisann.github.io/HP/img/home/link0.png'" border="0" width="256" height="32"></a><FONT SIZE=-3 COLOR=#999999>  最終更新日：令和6年1月4日</FONT><br>
+<FONT COLOR=#999999>リンク置き場。言うほど異的じゃ無い。</FONT><br>
 
 <br><hr><br>
 連絡などは各種SNSにてお願いします。<br>
