--- a/pc/OLDPC.html
+++ b/pc/OLDPC.html
@@ -8,6 +8,9 @@
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
 <h2>PC関係の間 古いPC</h2>
+<br><br><a href="https://mizutisann.github.io/HP/pc/oldpc/pcoldap2act2.html">PC-9821Ap2を直そうとする。そしてヤケド。パート1<br>
+<img src="https://mizutisann.github.io/HP/img/pc/oldpc/pcoldap2act2.jpg" border="0" width="320" height="111"></a><br>
+<FONT SIZE=-3 COLOR=#999999>令和5年3月</FONT><br>
 <br><br><a href="https://mizutisann.github.io/HP/pc/oldpc/pcoldap2act1.html">PC-9821Ap2を直そうとする。そしてヤケド。パート1<br>
 <img src="https://mizutisann.github.io/HP/img/pc/oldpc/pcoldap2act1.jpg" border="0" width="320" height="111"></a><br>
 <FONT SIZE=-3 COLOR=#999999>令和4年12月</FONT><br>
