--- a/zakki2.html
+++ b/zakki2.html
@@ -8,6 +8,16 @@
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
 
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">帰ってきた首都高バトル</font><br></td>
+             <td align="center" width="200">2024年8月22日<br></td></tr></tbody></table>
+<table border="1" width="999"><tbody><tr><td width="200" align="left">
+遂に噂されていた首都高バトル新作のティザームービーが公開された。<br>
+海外の首都高鯖で、ブラウザの配信を行いながらカウントダウンを見守ったが、直後は物凄い負荷で見れず、海外ニキが貼ってくれたGENKIのTwitterで見た。<br>
+C1の外回りを芝公園ランプから”ラビット”の初めまで早回しで流すという内容だったので、風景を見てみたが、首都高バトルXの時とほぼ同じっぽかった。<br>
+2024年の首都高を走りたかったので、ぶっちゃけガッカリはした。<br>
+まあ、最後のコンシューマ版首都高バトルXが発売されて十数年、『首都高バトル』が作れるという気が嬉しかった。<br>
+</td></tr></tbody></table><br><br><br>
+
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">携帯ゲーム機修理三本勝負</font><br></td>
              <td align="center" width="200">2024年7月16日<br></td></tr></tbody></table>
 <table border="1" width="999"><tbody><tr><td width="200" align="left">
