--- a/zakki2.html
+++ b/zakki2.html
@@ -8,6 +8,17 @@
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
 
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">町、時の流れ、人</font><br></td>
+             <td align="center" width="200">2024年9月29日<br></td></tr></tbody></table>
+<table border="1" width="999"><tbody><tr><td width="200" align="left">
+JR松山駅が今日、新駅舎へと移り変わる。生まれてこの方、あのショボい駅舎だったので何か物悲しい。<br>
+…最近ふと思う事がある。高度経済成長期の頃のとてつもない発展を目の前にした当時の人の心境はどうだったのだろうか？<br>
+焼野原だった場所にビルが経ち、田んぼを埋め立て家が建ち、車も片手のどの年数で買い替えるのが当たり前。チェーン店も毎年のように上陸していたのではないだろうか。<br>
+こういう時代に生まれていたら物悲しいなんて感想が出なかったのだろうか？<br>
+そもそも、現代も目まぐるしく変化をしているが、日々刻々と変化していく物だから認知できないのだろうか…？<br><br>
+多分、その時代を生きないと分からない事だろうけどね。<br>
+</td></tr></tbody></table><br><br><br>
+
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">帰ってきた首都高バトル</font><br></td>
              <td align="center" width="200">2024年8月22日<br></td></tr></tbody></table>
 <table border="1" width="999"><tbody><tr><td width="200" align="left">
