--- a/zakki2.html
+++ b/zakki2.html
@@ -8,6 +8,19 @@
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
 
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">ツーリングっぽいツーリング</font><br></td>
+             <td align="center" width="200">2024年10月22日<br></td></tr></tbody></table>
+<table border="1" width="999"><tbody><tr><td width="200" align="left">
+いつもバイクに乗る時は一匹狼な自分だが、ひょんなことから友人のツーリングっぽいツーリングに参加することになった。<br>
+近所のコンビニに集合。人数は自分含め4人。（400、250二台、50←俺）と中々ひどい事になっていた。<br>
+自分、友人、友人の会社の同期、小中が同じだった知り合い。色々駄弁った後に出発。<br>
+とりあえず目的地は今治で、桜三里経由で西条へ、11号から196号を北に行き今治、そのまま196号を通り松山へ戻るという工程。<br>
+皆インカムを付けていたのでライン通話で話しながら移動、音声通話は初めてだったので設定不足かヘルメットの密閉性が足りず、走行中、声が微かに聞こえる程度だった。<br>
+国道11号を東へ行って桜三里へ、原付乗りの人ならば察せると思うが、アレが掛かっているので失火してアレだった。<br>
+桜三里の途中にあるライダーズカフェを発見した友人が「行きたい」というので行き、揚げパンを食べながら駄弁ってるうちに日が傾いてきたのでUターンで帰宅した。<br>
+時間工程や行き先もガバガバなツーリングとも呼べないような物だったが、良いものだった。・・・免許取らないとなあ。(^^;<br>
+</td></tr></tbody></table><br><br><br>
+
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">町、時の流れ、人</font><br></td>
              <td align="center" width="200">2024年9月29日<br></td></tr></tbody></table>
 <table border="1" width="999"><tbody><tr><td width="200" align="left">
