--- a/zakki2.html
+++ b/zakki2.html
@@ -11,7 +11,7 @@
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">ツーリングっぽいツーリング</font><br></td>
              <td align="center" width="200">2024年10月22日<br></td></tr></tbody></table>
 <table border="1" width="999"><tbody><tr><td width="200" align="left">
-いつもバイクに乗る時は一匹狼な自分だが、ひょんなことから友人のツーリングっぽいツーリングに参加することになった。<br>
+いつもバイク(と言っても原付)に乗る時は一匹狼な自分だが、ひょんなことから友人のツーリングっぽいツーリングに参加することになった。<br>
 近所のコンビニに集合。人数は自分含め4人。（400、250二台、50←俺）と中々ひどい事になっていた。<br>
 自分、友人、友人の会社の同期、小中が同じだった知り合い。色々駄弁った後に出発。<br>
 とりあえず目的地は今治で、桜三里経由で西条へ、11号から196号を北に行き今治、そのまま196号を通り松山へ戻るという工程。<br>
