--- a/zakki2.html
+++ b/zakki2.html
@@ -8,6 +8,15 @@
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
 
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">思ったこと。</font><br></td>
+             <td align="center" width="200">2024年11月20日<br></td></tr></tbody></table>
+<table border="1" width="999"><tbody><tr><td width="200" align="left">
+首都高バトルオンラインというサービスが昔存在していた。<br>
+現在公式な手段では遊べず某所でダウンロード、言うなれば割らなければ遊べないゲームである。<br>
+そして、主に海外の某discord鯖でそれが行われているのだが、今度出る新作に合わせ、その某discord鯖が開発元GENKI公認な鯖となった。<br>
+日本人は過度な割れ警察が集まって損ばかりしているように感じてしまう。<br>
+</td></tr></tbody></table><br><br><br>
+
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">ツーリングっぽいツーリング</font><br></td>
              <td align="center" width="200">2024年10月22日<br></td></tr></tbody></table>
 <table border="1" width="999"><tbody><tr><td width="200" align="left">
