--- a/zakki2.html
+++ b/zakki2.html
@@ -13,8 +13,9 @@
 <table border="1" width="999"><tbody><tr><td width="200" align="left">
 首都高バトルオンラインというサービスが昔存在していた。<br>
 現在公式な手段では遊べず某所でダウンロード、言うなれば割らなければ遊べないゲームである。<br>
-そして、主に海外の某discord鯖でそれが行われているのだが、今度出る新作に合わせ、その某discord鯖が開発元GENKI公認な鯖となった。<br>
-日本人は過度な割れ警察が集まって損ばかりしているように感じてしまう。<br>
+そして、主に海外の某discord鯖でそれが行われているのだが、<br>
+今度出る新作に合わせ、その某discord鯖が開発元GENKI公認な鯖となった。<br>
+法律の違いが大きな要因かも知れないが、日本人は過度な割れ警察が集まって損ばかりしているように感じてしまう。<br>
 いつからこうなったのだろうか…。Winny辺りかなぁ。知らんけどさ。<br>
 </td></tr></tbody></table><br><br><br>
 
