--- a/zakki2.html
+++ b/zakki2.html
@@ -8,6 +8,16 @@
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
 
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">日暮れのI寄峠にて</font><br></td>
+             <td align="center" width="200">2024年11月20日<br></td></tr></tbody></table>
+<table border="1" width="999"><tbody><tr><td width="200" align="left">
+祖父母の家で少々長居してしまい、黄昏時にI寄峠を原付で越えないと帰れなくなった。<br>
+この日は、早朝から活動をしていたので、疲労困憊な所に、日暮れで視力が鈍っていく、しかも寒いという三重苦であった。<br>
+片側一車線で追い越されも難しいので、N山の道の駅で休憩して、同じタイミングで出た黒のBOXを追いかける事にした。<br>
+こっちの速度が”目一杯”な中、前のBOXはキープレフトで舗装の荒れたコーナーを先陣切っていく。<br>
+これが”地元”ってヤツか…と思った。自分はM坂や某ダムで同じように走れるだろうか…。いやー無理だな…。<br>
+</td></tr></tbody></table><br><br><br>
+
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">思ったこと。</font><br></td>
              <td align="center" width="200">2024年11月20日<br></td></tr></tbody></table>
 <table border="1" width="999"><tbody><tr><td width="200" align="left">
