--- a/zakki2.html
+++ b/zakki2.html
@@ -8,6 +8,17 @@
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
 
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">とある時計を入手した。</font><br></td>
+             <td align="center" width="200">2024年12月30日<br></td></tr></tbody></table>
+<table border="1" width="999"><tbody><tr><td width="200" align="left">
+十六夜咲夜のスペカ背景のムーブメントが入ってる懐中時計を入手した。<br>
+スペカ背景のムーブメントは文様と丸穴車と角穴車の文様、緩急針の形状から見て、Waltham社のmodel 1894の15石、1920年～22年と判断した。<br>
+今回入手したのは1922年式。102年物。十二分にビンテージといった具合。<br>
+知り合いの時計趣味の人に軽い注油をしてもらい、タイムグラファーを借りて見てみたが、まあまあな日差と姿勢差があった。<br>
+姿勢差は曰く「テンシンの軸が摩耗してる？油がなじめば変わるかも？」との事。OHも頼もうとしたが部品が無いとの事でやんわり断られた。そりゃそうだ。<br>
+興味あるし、自家製OHに挑戦するために最低限の道具とジャンクWalthamでも買い漁ろうかなぁ……。沼に両足突っ込んじまったよ(^^;<br>
+</td></tr></tbody></table><br><br><br>
+
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">日暮れのI寄峠にて</font><br></td>
              <td align="center" width="200">2024年11月20日<br></td></tr></tbody></table>
 <table border="1" width="999"><tbody><tr><td width="200" align="left">
