--- a/zakki2.html
+++ b/zakki2.html
@@ -538,7 +538,7 @@ P.S.トプ画変更しました～。年賀新年の謎のうちの子(^^;、名
 <br></td></tr></tbody></table><br><br><br>
 
 
-<a href="https://mizutisann.github.io/HP/zakki">過去の雑記はここから<br></a><br>
+<a href="https://mizutisann.github.io/HP/zakki">2023年以前の雑記はここから<br></a><br>
 <a href="https://mizutisann.github.io/HP/home"><img src="https://mizutisann.github.io/HP/img/modoru.png"><br></a>
 </DIV>
 </body>
