--- a/zakki3.html
+++ b/zakki3.html
@@ -9,16 +9,15 @@
 <div align="center">
 
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
-あけましておめでとうございます</font><br></td>
-             <td align="center" width="200">
-2025年1月1日<br></td></tr></tbody></table>
-<table border="1" width="999"><tbody><tr><td width="200" align="left">
+あけましておめでとうございます</font><br></td><td align="center" width="200">
+2025年1月1日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
 2025年あけましておめでとうございます。<br>
-
+もう2025年かぁ…。21世紀も四分の一が過ぎようとしているわけですか…（書いてて血反吐を吐いて死にそう(^^;）<br>
+今年こそは流石に自動車免許取りたいね…。<br>
 <br></td></tr></tbody></table><br><br><br>
 
 
-<a href="https://mizutisann.github.io/HP/zakki2">過去の雑記はここから<br></a><br>
+<a href="https://mizutisann.github.io/HP/zakki2">2024年の雑記はここから<br></a><br>
 <a href="https://mizutisann.github.io/HP/home"><img src="https://mizutisann.github.io/HP/img/modoru.png"><br></a>
 </DIV>
 </body>
