--- a/zakki3.html
+++ b/zakki3.html
@@ -15,7 +15,7 @@
 もう2025年かぁ…。21世紀も四分の一が過ぎようとしているわけですか…（書いてて血反吐を吐いて死にそう(^^;）<br>
 今年こそは流石に自動車免許取りたいね…。<br>
 P.S. 前の雑記で書いた懐中時計のゼンマイを巻いてた所、バチッという音とともに不動になってしまった…。<br>
-道具買ってOHと修理やね…。<br>
+道具買ってOHと修理やね…。
 <br></td></tr></tbody></table><br><br><br>
 
 
