--- a/zakki3.html
+++ b/zakki3.html
@@ -9,6 +9,13 @@
 <div align="center">
 
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
+繪描板</font><br></td><td align="center" width="200">
+2025年1月6日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
+溜まってたメールBOXを見ていたら、繪描板用で借りているスターオウルから「スターサーバーフリー」のサービスが今年度をもって終了するとの通達が来ていた。<br>
+移行作業がメンドクサイし、このままリンク切れにでもしようかな…。うーむ。<br>
+<br></td></tr></tbody></table><br><br><br>
+
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
 あけましておめでとうございます</font><br></td><td align="center" width="200">
 2025年1月1日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
 2025年あけましておめでとうございます。<br>
