--- a/zakki3.html
+++ b/zakki3.html
@@ -9,10 +9,21 @@
 <div align="center">
 
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
+例の懐中時計を素人修理＆オーバーホール</font><br></td><td align="center" width="200">
+2025年1月6日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
+例のWaltham15石の懐中時計を素人修理＆オーバーホールした。<br>
+新たに5000円分ぐらいの道具を買い、切れたゼンマイは部品どりでポチッた、同種の懐中時計の香箱ごと移植して修理。<br>
+今のところ、ゼンマイが切れる前よりも若干狂いが少なく、快調に動いているので気分が良い。<br>
+（OH前だと3分ぐらいの狂いがあったが、OH後は日差1分～2分ぐらいで収まった。）
+部品取りの方もテンプの回転が悪かったのを無理やり直したので、ゼンマイさえ手に入れば稼働できるはず。<br>
+時計弄り、なかなか面白いかも。
+<br></td></tr></tbody></table><br><br><br>
+
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
 繪描板</font><br></td><td align="center" width="200">
 2025年1月6日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
 溜まってたメールBOXを見ていたら、繪描板用で借りているスターオウルから「スターサーバーフリー」のサービスが今年度をもって終了するとの通達が来ていた。<br>
-移行作業がメンドクサイし、このままリンク切れにでもしようかな…。うーむ。<br>
+移行作業がメンドクサイし、このままリンク切れにでもしようかな…。うーむ。
 <br></td></tr></tbody></table><br><br><br>
 
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
