--- a/zakki3.html
+++ b/zakki3.html
@@ -9,6 +9,32 @@
 <div align="center">
 
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
+怪我の話</font><br></td><td align="center" width="200">
+2025年2月11日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
+変な持ち方で3Dプリンタで造形したもののサポートをカッターで削っていたら中指の腹を怪我をした。<br>
+3針縫った。（先生曰く1針でも良かったんだけどねーとの事だが…）<br>
+拾った3Dモデルの印刷だったため、無駄な造形に無駄なサポートが付き、無駄にカッターを使ったため起きた事故だった。<br>
+再配布しないし、加工してから印刷すればよかったな…。<br>
+<br></td></tr></tbody></table><br><br><br>
+
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
+首都高バトル新作</font><br></td><td align="center" width="200">
+2025年1月27日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
+備忘録も兼ねて要ること要らないこと書いていきます。
+配信数日前にはDLキーを貰った海外ニキや有名らしいVtuberがこぞって配信をしていた。<br>
+DLキーを貰った海外ニキの中には収録車種やライバルを纏めて動画にしていたりとカオスで面白かった。<br>
+予定よりも早い16時50分辺りからの配信開始だった。<br>
+Assetto Corsa EVOの時は深夜にコンビニダッシュを決めたが、今回はpaypay経由で事前に入金をしていたので準備万端だった。<br>
+ネット回線がクソ遅いので7GBも無いファイルをDLするのに1時間ぐらい掛かった。<br>
+18時辺りから首都高を走り続け、7時にはユウウツな天使戦までたどり着いたが、例のように爆速で2時間ぐらい苦戦した。<br>
+コイツの為にRX-8を買って、汐溜のS字でやっと仕留めれた。<br>
+辻斬りギャンブラー討伐の為、ナポリの風を狩り続けていたが、効率が悪く、<br>
+攻略を進めてきたガレージの車(RX-8、S13)を売り払い、ユウウツな天使専用車を買ってラストフライトを狩る事とした。<br>
+辻斬りギャンブラー討伐で無事ver0.10.1全ライバル討伐となった。販売開始から3日目の事だった。<br>
+全ライバル討伐後にバックで100km/hのバグ？が見つかった。残念。<br>
+<br></td></tr></tbody></table><br><br><br>
+
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
 例の懐中時計を素人修理＆オーバーホール</font><br></td><td align="center" width="200">
 2025年1月8日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
 例のWaltham15石の懐中時計を素人修理＆オーバーホールした。<br>
