--- a/zakki3.html
+++ b/zakki3.html
@@ -9,6 +9,19 @@
 <div align="center">
 
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
+懐中時計がまたこわれたので直した。</font><br></td><td align="center" width="200">
+2025年2月21日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
+中指の腹を切って病院に行った後、ふと時計を見ると不動になっていた。<br>
+バラしてみると凄くテンプの動きが悪い…。油を塗り替えても穴石の点検をしても変わらない。<br>
+これはいよいよテンシンだ…。ということでちょっと弄ってたらポロっと。破壊してしまった。＼(^o^)／ｵﾜﾀ<br>
+ゼンマイを部品取りした2号機からテンプ周りをごっそり移植。<br>
+テンプ受けは製造番号が刻んであるので一号機のを使用。<br>
+いやはや、あまり普段使いするもんじゃないね…(^^;<br>
+テンシン交換ができるように工具を買うべきか…（いよいよ時計屋さんかよ）<br>
+<br></td></tr></tbody></table><br><br><br>
+
+
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
 怪我の話</font><br></td><td align="center" width="200">
 2025年2月11日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
 変な持ち方で3Dプリンタで造形したもののサポートをカッターで削っていたら中指の腹を怪我をした。<br>
