--- a/zakki3.html
+++ b/zakki3.html
@@ -9,6 +9,12 @@
 <div align="center">
 
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
+懐古的繪描板のサービス休止のお知らせ</font><br></td><td align="center" width="200">
+2025年4月1日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
+スターフリーサーバーのサービスが終了した為、3月31日をもって懐古的繪描板のサービスを休止しました。ﾁｬﾝﾁｬﾝ。
+<br></td></tr></tbody></table><br><br><br>
+
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
 懐中時計がまたこわれたので直した。</font><br></td><td align="center" width="200">
 2025年2月21日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
 中指の腹を切って病院に行った後、ふと時計を見ると不動になっていた。<br>
