--- a/zakki3.html
+++ b/zakki3.html
@@ -9,6 +9,15 @@
 <div align="center">
 
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
+和暦と西暦</font><br></td><td align="center" width="200">
+2025年4月11日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
+自分の周りは時空が歪んでいるので（なんじゃそりゃ）、近頃、和暦と西暦が結びつかなくなってきた。<br>
+と、言うことで、このホオムペエジの和暦部分を徐々に西暦にしていってます。<br>
+昭和で行くなら今年が昭和100年だから分かりやすいんだけどね～。<br>
+あ、皇歴でもすぐ分かるな～（いやまあ今年が2685年と覚えやすいだけ(^^;）<br>
+<br></td></tr></tbody></table><br><br><br>
+  
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
 懐古的繪描板のサービス休止のお知らせ</font><br></td><td align="center" width="200">
 2025年4月1日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
 スターフリーサーバーのサービスが終了した為、3月31日をもって懐古的繪描板のサービスを休止しました。ﾁｬﾝﾁｬﾝ。
