--- a/zakki3.html
+++ b/zakki3.html
@@ -8,6 +8,14 @@
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
 
+
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
+八重洲線の話</font><br></td><td align="center" width="200">
+2025年4月12日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
+首都高速KK線が廃止となった。一度は走ってみたかったが願い叶わず。<br>
+C1改修前には免許取って走りに行かないとな。<br>
+<br></td></tr></tbody></table><br><br><br>
+
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
 和暦と西暦</font><br></td><td align="center" width="200">
 2025年4月11日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
