--- a/pc/OLDPC.html
+++ b/pc/OLDPC.html
@@ -11,7 +11,7 @@
 <br><br><a href="https://mizutisann.github.io/HP/pc/oldpc/pcoldap2act2.html">PC-9821Ap2を直そうとする。そしてヤケド。パート1<br>
 <img src="https://mizutisann.github.io/HP/img/pc/oldpc/ap2act2.jpg" border="0" width="320" height="111"></a><br>
 <FONT SIZE=-3 COLOR=#999999>令和5年3月</FONT><br>
-<br><br><a href="https://mizutisann.github.io/HP/pc/oldpc/pcoldap2act1.html">PC-9821Ap2を直そうとする。そしてヤケド。パート1<br>
+<br><br><a href="https://mizutisann.github.io/HP/pc/oldpc/pcoldap2act1.html">PC-9821Ap2を整備する。パート2<br>
 <img src="https://mizutisann.github.io/HP/img/pc/oldpc/pcoldap2act1.jpg" border="0" width="320" height="111"></a><br>
 <FONT SIZE=-3 COLOR=#999999>令和4年12月</FONT><br>
 <br><br><a href="https://mizutisann.github.io/HP/pc/oldpc/pcoldclassic2act1.html">Macintosh classic2を直した。パート1<br>
