--- a/zakki3.html
+++ b/zakki3.html
@@ -8,6 +8,17 @@
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
 
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
+電子端末デストロイヤー</font><br></td><td align="center" width="200">
+2025年5月5日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
+最近メインスマホ、SO-52Bの電源ボタンが故障したので、無理やり直した。<br>
+が、どういう訳かBTや電波の飛びがまあまあ悪くなってしまったし、メインカメラのピント調節機構が動かなくなってしまった。<br>
+旅先でGPSがバグって迷子は回避したかったので、放置してあったタブレット、J-01bを持ってきたが、<br>
+Gマップで動作がカクついて微妙な使い心地だったので、決心してROM焼きを行う事とした。<br>
+ROM焼きの為の作業で分解をしたのだが、ヘラを入れ過ぎたのか、画面上2割がタッチ切れを起こしてしまった。<br>
+激萎えしている…。<br>
+旅先（秋葉原？）で新しいスマホ買うか……？<br>
+<br></td></tr></tbody></table><br><br><br>
 
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
 八重洲線の話</font><br></td><td align="center" width="200">
