--- a/zakki3.html
+++ b/zakki3.html
@@ -17,14 +17,14 @@
 Gマップで動作がカクついて微妙な使い心地だったので、決心してROM焼きを行う事とした。<br>
 ROM焼きの為の作業で分解をしたのだが、ヘラを入れ過ぎたのか、画面上2割がタッチ切れを起こしてしまった。<br>
 激萎えしている…。<br>
-旅先（秋葉原？）で新しいスマホ買うか……？<br>
+旅先（秋葉原？）で新しいスマホ買うか……？
 <br></td></tr></tbody></table><br><br><br>
 
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
 八重洲線の話</font><br></td><td align="center" width="200">
 2025年4月12日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
 首都高速KK線が廃止となった。一度は走ってみたかったが願い叶わず。<br>
-C1改修前には免許取って走りに行かないとな。<br>
+C1改修前には免許取って走りに行かないとな。
 <br></td></tr></tbody></table><br><br><br>
 
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
@@ -33,7 +33,7 @@ C1改修前には免許取って走りに行かないとな。<br>
 自分の周りは時空が歪んでいるので（なんじゃそりゃ）、近頃、和暦と西暦が結びつかなくなってきた。<br>
 と、言うことで、このホオムペエジの和暦部分を徐々に西暦にしていってます。<br>
 昭和で行くなら今年が昭和100年だから分かりやすいんだけどね～。<br>
-あ、皇歴でもすぐ分かるな～（いやまあ今年が2685年と覚えやすいだけ(^^;）<br>
+あ、皇歴でもすぐ分かるな～（いやまあ今年が2685年と覚えやすいだけ(^^;）
 <br></td></tr></tbody></table><br><br><br>
   
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
@@ -51,7 +51,7 @@ C1改修前には免許取って走りに行かないとな。<br>
 ゼンマイを部品取りした2号機からテンプ周りをごっそり移植。<br>
 テンプ受けは製造番号が刻んであるので一号機のを使用。<br>
 いやはや、あまり普段使いするもんじゃないね…(^^;<br>
-テンシン交換ができるように工具を買うべきか…（いよいよ時計屋さんかよ）<br>
+テンシン交換ができるように工具を買うべきか…（いよいよ時計屋さんかよ）
 <br></td></tr></tbody></table><br><br><br>
 
 
@@ -61,7 +61,7 @@ C1改修前には免許取って走りに行かないとな。<br>
 変な持ち方で3Dプリンタで造形したもののサポートをカッターで削っていたら中指の腹を怪我をした。<br>
 3針縫った。（先生曰く1針でも良かったんだけどねーとの事だが…）<br>
 拾った3Dモデルの印刷だったため、無駄な造形に無駄なサポートが付き、無駄にカッターを使ったため起きた事故だった。<br>
-再配布しないし、加工してから印刷すればよかったな…。<br>
+再配布しないし、加工してから印刷すればよかったな…。
 <br></td></tr></tbody></table><br><br><br>
 
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
@@ -78,7 +78,7 @@ Assetto Corsa EVOの時は深夜にコンビニダッシュを決めたが、今
 辻斬りギャンブラー討伐の為、ナポリの風を狩り続けていたが、効率が悪く、<br>
 攻略を進めてきたガレージの車(RX-8、S13)を売り払い、ユウウツな天使専用車を買ってラストフライトを狩る事とした。<br>
 辻斬りギャンブラー討伐で無事ver0.10.1全ライバル討伐となった。販売開始から3日目の事だった。<br>
-全ライバル討伐後にバックで100km/hのバグ？が見つかった。残念。<br>
+全ライバル討伐後にバックで100km/hのバグ？が見つかった。残念。
 <br></td></tr></tbody></table><br><br><br>
 
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
