--- a/zakki3.html
+++ b/zakki3.html
@@ -9,6 +9,15 @@
 <div align="center">
 
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
+がむしゃらXXXXkm</font><br></td><td align="center" width="200">
+2025年5月5日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
+ひとつ前の雑記で『旅先（秋葉原？）で…』と書いたが、これは大マジである。<br>
+私の十代も50CCとしての原付も、今年で終わってしまう。こんな年に千葉まで原付で旅行をせずにいられるか！<br>
+というわけで、絶賛貯金中。予定では6月26日発、7月1日帰宅の予定。<br>
+無事帰れると良いな(^^;
+<br></td></tr></tbody></table><br><br><br>
+
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
 電子端末デストロイヤー</font><br></td><td align="center" width="200">
 2025年5月5日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
 最近メインスマホ、SO-52Bの電源ボタンが故障したので、無理やり直した。<br>
