--- a/zakki3.html
+++ b/zakki3.html
@@ -9,6 +9,28 @@
 <div align="center">
 
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
+生成AIと自分</font><br></td><td align="center" width="200">
+2025年5月14日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
+東方新作の背景に生成AIが使われている件で、対岸は火の海だそうだ。<br>
+東方原作の一件については「まあ今まで怪しい素材も使ってたし、まだAI製の素材の方がマシかな…」と思っている。<br>
+聖地巡礼の機会が減ってしまいそうなのは残念だが。<br>
+<br>
+将来、自分が振り返って楽しめるように、現状、生成AIについて思っている事を書き残そう。<br>
+私は生成AIの恩恵をあまり受けられていない。<br>
+偶にChatGPTは使うが、名称の分からない物の名前を知る程度の利用しかしていない。<br>
+他人がAIで作った物で言えば、YAJU＆Uは面白かった。<br>
+一方、価値の無い物を見分ける為に掛かる労力が増えた。<br>
+Twitterは『ファクトチェック』や、AIを使ったそれっぽい返信で溢れかえっている。<br>
+そういう怪しいアカウントは片っ端からブロックしているが、AIかどうか判断する数秒が虚しい。<br>
+pixivは生成AIの被害が大きかったように感じる。まあまあな絵師が投稿を辞めてしまったし、<br>
+AIで生成した画像によって、より『性癖のゴミ捨て場』になってしまった。<br>
+また、AI除けの、妙に目障りな透かしが気に障る。個人的には投稿者の名前も壁紙にすると目立つので好きではない。<br>
+マイナーな車を検索すると生成AIを使って出力した「〇〇が復活！？」みたいなクソ動画が大量にヒットするようになってしまった。<br>
+<br>
+なるべく生成AIとは中立的な立場でありたいが、今のところ、端的に言ってしまうと嫌いだ。
+<br></td></tr></tbody></table><br><br><br>
+
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
 がむしゃらXXXXkm</font><br></td><td align="center" width="200">
 2025年5月5日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
 ひとつ前の雑記で『旅先（秋葉原？）で…』と書いたが、これは大マジである。<br>
