--- a/zakki3.html
+++ b/zakki3.html
@@ -9,6 +9,14 @@
 <div align="center">
 
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
+東京に行って来ました。原チャで。</font><br></td><td align="center" width="200">
+2025年7月12日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
+ついうっかり書き込みを忘れていたが、行って帰ってきました。<br>
+２泊３日で東京に着いて、船橋サーキット跡地を見に千葉の船橋まで行き、幺樂団カァニバルに顔を出し、アセコル仲間の大田区の車屋さんにお世話になり、有明─徳島のフェリーで帰ってきました。<br>
+まあ原チャと言ってもドリームなので、そりゃ行けるよ。なんて思わなくもないが、まあご愛嬌ということで(^^;;;
+<br></td></tr></tbody></table><br><br><br>
+
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
 生成AIと自分</font><br></td><td align="center" width="200">
 2025年5月14日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
 東方新作の背景に生成AIが使われている件で、対岸は火の海だそうだ。<br>
