--- a/zakki3.html
+++ b/zakki3.html
@@ -13,7 +13,10 @@
 2025年7月12日<br></td></tr></tbody></table><table border="1" width="999"><tbody><tr><td width="200" align="left">
 ついうっかり書き込みを忘れていたが、行って帰ってきました。<br>
 ２泊３日で東京に着いて、船橋サーキット跡地を見に千葉の船橋まで行き、幺樂団カァニバルに顔を出し、アセコル仲間の大田区の車屋さんにお世話になり、有明─徳島のフェリーで帰ってきました。<br>
-まあ原チャと言ってもドリームなので、そりゃ行けるよ。なんて思わなくもないが、まあご愛嬌ということで(^^;;;
+まあ原チャと言ってもドリームなので、そりゃ行けるよ。なんて思わなくもないが、まあご愛嬌ということで(^^;;;<br>
+<br>
+P.S.そういえば秋葉でスマホ買ってきました。Xperia1Ⅱ　SO-51A（画面下部画面焼けジャンクで12000円）<br>
+前のXperia10Ⅲ SO-52Bと比べると、一世代古くなったもののハイエンド機ということで滅茶苦茶快適です。
 <br></td></tr></tbody></table><br><br><br>
 
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">
